[package]
name = "keypackage_test_server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = {version ="0.8.1"}
futures = "0.3.31"
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version ="1.44.0", features = ["full"]}
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version ="1.11.0", features = ["v4"]}
